# devin-automation

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  dashboard.py  docker-compose.yml  pyproject.toml  run_single.py
.github/workflows/: dependency-automation.yml
src/dep_automation/: __init__.py  cli.py  config.py  devin.py  github.py  manifests.py  metrics.py  models.py  prompts.py  registries.py  runner.py  sample.py  selection.py  state.py  usage.py  versioning.py
state/: processed.json
tests/: test_config.py  test_devin.py  test_github.py  test_manifests.py  test_metrics.py  test_registries.py  test_runner.py  test_sample.py  test_selection.py  test_usage.py  test_versioning.py
tests/fixtures/: sample_package.json  sample_pyproject.toml
